codex-rs/tui-integration-tests/tests/snapshots/startup__runs_in_temp_directory.snap
---
source: tui-integration-tests/tests/startup.rs
expression: session.screen_contents()
---
                                      
             _._:=++==+,_             
         _=,/*\+/+\=||=_ _"+_         
       ,|*|+**"^`   `"*`"~=~||+       
      ;*_\*',,_            /*|;|,     
     \^;/'^|\`\\            ".|\\,    
    ~* +`  |*/;||,           '.\||,   
   +^"-*    '\|*/"|_          ! |/|   
   ||_|`     ,//|;|*            "`|   
   |=~'`    ;||^\|".~++++++_+, =" |   
    _~;*  _;+` /* |"|___.:,,,|/,/,|   
    \^_"^ ^\,./`   `^*''* ^*"/,;_/    
     *^, ", `              ,'/*_|     
       ^\,`\+_          _=_+|_+"      
         ^*,\_!*+:;=;;.=*+_,|*        
           `*"*|~~___,_;+*"           
                                      

  Welcome to Codex, OpenAI's command-line coding agent

> You are running Codex in /tmp/.tmpdOxzNS

  Since this folder is not version controlled, we recommend requiring approval
  of all edits and commands.
