codex-rs/tui-integration-tests/tests/snapshots/startup__trust_screen_skipped.snap
---
source: tui-integration-tests/tests/startup.rs
expression: session.screen_contents()
---
› Improve documentation in @filename

  100% context left · ? for shortcuts
